# faststi

./: .#fsti-simulation.h  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.am  Makefile.in  README.md  compile-mac.sh  conf.py  config.h  config.status  configure  configure.ac  faststi  faststi.pc.in  fsti  fsticreate  fstirun  meson.build  todo.txt
R/: fitting_exercise.Rmd
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
data/: InitialPopulationCalculations.ods  MortalityCalculations.ods  dataset_birth_infect.csv  dataset_birth_resistant.csv  dataset_coinfect.csv  dataset_gen_infect.csv  dataset_gen_mating.csv  dataset_gen_sex.csv  dataset_gen_sex_preferred.csv  dataset_gen_treated.csv  dataset_infect.csv  dataset_infect_stage.csv  dataset_mortality.csv  dataset_mortality_simple.csv  dataset_mortality_staged.csv  dataset_rel.csv  dataset_single.csv  meson.build
docs/: #extending.rst#  Makefile  conf.py  events.rst  example.rst  extending.rst  guide.rst  improve.rst  index.rst  inputformats.rst  installation.rst  intro.rst  license.rst  outputformats.rst  parameters.rst  refs.rst  testing.rst
docs/_build/doctrees/: credits.doctree  environment.pickle  events.doctree  example.doctree  extending.doctree  getstart.doctree  guide.doctree  improve.doctree  index.doctree  inputformats.doctree  installation.doctree  intro.doctree  license.doctree  outputformats.doctree  parameters.doctree  python.doctree  refs.doctree  testing.doctree
docs/_build/html/: .buildinfo  credits.html  events.html  example.html  extending.html  genindex.html  getstart.html  guide.html  improve.html  index.html  inputformats.html  installation.html  intro.html  license.html  objects.inv  outputformats.html  parameters.html  python.html  refs.html  search.html  searchindex.js  testing.html
docs/_build/html/_sources/: credits.rst.txt  events.rst.txt  example.rst.txt  extending.rst.txt  getstart.rst.txt  index.rst.txt  inputformats.rst.txt  installation.rst.txt  intro.rst.txt  license.rst.txt  parameters.rst.txt  python.rst.txt  testing.rst.txt
docs/_build/html/_static/: FastSTI-Overview.odg  results.tgz
docs/doxygen/: Doxyfile
docs/doxygen/output/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  fsti-agent_8c.html  fsti-agent_8c.js  fsti-agent_8h.html  fsti-agent_8h.js  fsti-agent_8h_source.html  fsti-config_8c.html  fsti-config_8c.js  fsti-config_8h.html  fsti-config_8h.js  fsti-config_8h_source.html  fsti-defaults_8c.html  fsti-defaults_8c.js  fsti-defaults_8h.html  fsti-defaults_8h.js  fsti-defaults_8h_source.html  fsti-defs_8c.html  fsti-defs_8c.js  fsti-defs_8h.html  fsti-defs_8h.js  fsti-defs_8h_source.html  fsti-error_8c.html  fsti-error_8c.js  fsti-error_8h.html  fsti-error_8h.js  fsti-error_8h_source.html  fsti-eventdefs_8c.html  fsti-eventdefs_8c.js  fsti-eventdefs_8h.html  fsti-eventdefs_8h.js  fsti-eventdefs_8h_source.html  fsti-events_8c.html  fsti-events_8c.js  fsti-events_8h.html  fsti-events_8h.js  (+94 more)
docs/doxygen/output/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  fsti-agent_8c.tex  fsti-agent_8h.tex  fsti-config_8c.tex  fsti-config_8h.tex  fsti-defaults_8c.tex  fsti-defaults_8h.tex  fsti-defs_8c.tex  fsti-defs_8h.tex  fsti-error_8c.tex  fsti-error_8h.tex  fsti-eventdefs_8c.tex  fsti-eventdefs_8h.tex  fsti-events_8c.tex  fsti-events_8h.tex  fsti-main_8c.tex  fsti-procini_8c.tex  fsti-procini_8h.tex  fsti-report_8c.tex  fsti-report_8h.tex  fsti-simset_8c.tex  fsti-simset_8h.tex  fsti-simulation_8c.tex  fsti-simulation_8h.tex  fsti-tests_8c.tex  fsti-tests_8h.tex  fsti-userdefs_8c.tex  fsti-userdefs_8h.tex  fsti-variants_8h.tex  fsti_8h.tex  refman.tex  structfsti__agent.tex  structfsti__agent__arr.tex  structfsti__agent__ind.tex  structfsti__config.tex  structfsti__config__entry.tex  structfsti__csv__agent.tex  structfsti__csv__entry.tex  (+8 more)
docs/doxygen/output/xml/: dir_68267d1309a1af8e8297ef4c3efbcdba.xml  fsti-agent_8c.xml  fsti-agent_8h.xml  fsti-config_8c.xml  fsti-config_8h.xml  fsti-defaults_8c.xml  (+40 more)
releasegcc/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
releasegcc/meson-logs/: meson-log.txt
releasegcc/src/: faststi
scripts/: README  check_faststi.sh  faststi.py  meson.build  processResultsFile.R  processResultsFile.py  recents.py  test_dist.sh  testfsti.c  valgrind_faststi.sh
simulations/: test.ini
simulations/basic/: agents_in.csv  basic.ini  incragents.ini  speedtest.ini  test.ini
simulations/examples/: eg1.ini  eg2.ini  eg3.ini  experiment.ini
simulations/recents/: dataset_gen_mating.csv  dataset_infect.csv  recent.ini  recents.ini
simulations/syphilis/: .~lock.agents_syphilis_out.csv#  agents_syphilis_in.csv  syphilis.ini
src/: Makefile  Makefile.am  Makefile.in  check_faststi.sh  faststi.py  fsti-agent.c  fsti-agent.h  fsti-config.c  fsti-config.h  fsti-dataset.c  fsti-dataset.h  fsti-defaults.c  fsti-defaults.h  fsti-defs.c  fsti-defs.h  fsti-error.c  fsti-error.h  fsti-eventdefs.c  fsti-eventdefs.h  fsti-events.c  fsti-events.h  fsti-generate.c  fsti-generate.h  fsti-main.c  fsti-procini.c  fsti-procini.h  fsti-pythoncalls.c  fsti-pythoncalls.h  fsti-report.c  fsti-report.h  fsti-simset.c  fsti-simset.h  fsti-simulation.c  fsti-simulation.h  fsti-testcode.h  fsti-tests.c  fsti-tests.h  fsti-userdefs.c  fsti-userdefs.h  fsti-variants.h  (+4 more)
src/.deps/: faststi-fsti-agent.Po  faststi-fsti-config.Po  faststi-fsti-dataset.Po  faststi-fsti-defaults.Po  faststi-fsti-defs.Po  faststi-fsti-error.Po  faststi-fsti-eventdefs.Po  faststi-fsti-events.Po  faststi-fsti-main.Po  faststi-fsti-procini.Po  faststi-fsti-report.Po  faststi-fsti-simset.Po  faststi-fsti-simulation.Po  faststi-fsti-tests.Po  faststi-fsti-userdefs.Po
src/utils/: algorithms.c  algorithms.h  array.c  array.h  csv.c  csv.h  test.c  test.h  utils.h
src/utils/.deps/: faststi-algorithms.Po  faststi-array.Po  faststi-csv.Po  faststi-test.Po
tests/: agents.csv  agents_in.csv  test.ini
(+51 files in other folders)
