SUBDIRS = src
EXTRA_DIST = 	simulations/examples/eg1.ini		\
		simulations/examples/eg2.ini		\
		simulations/examples/experiment.ini	\
		simulations/examples/agents_in.csv	\
		data/dataset_birth_infect.csv 		\
		data/dataset_birth_resistant.csv 	\
		data/dataset_birth_treated.csv		\
		data/dataset_coinfect.csv		\
		data/dataset_gen_infect.csv		\
		data/dataset_gen_mating.csv		\
		data/dataset_gen_resistant.csv		\
		data/dataset_gen_sex.csv		\
		data/dataset_gen_sex_preferred.csv	\
		data/dataset_gen_treated.csv		\
		data/dataset_infect.csv			\
		data/dataset_infect_stage.csv		\
		data/dataset_mortality.csv		\
		data/dataset_mortality_simple.csv	\
		data/dataset_rel.csv			\
		data/dataset_single.csv			\
		scripts/processResultsFile.py		\
		scripts/processResultsFile.R		\
		scripts/README

