project('faststi', 'c', license : 'GPL3', version : '1.0',
        default_options : ['c_std=c11'])

# Update these for new releases if necessary
dir_name = meson.project_name()
lib_name = 'lib' + dir_name
lib_version = meson.project_version() + '.0'
project_description = 'Fast agent-based simulation of sexually transmitted infections'


subdir('src')
# subdir('tests')
# subdir('doc')
