project('faststi',
        'c',
        license : 'GPL3',
        version : '0.5.2')

# Update these for new releases if necessary
dir_name = meson.project_name()
lib_name = 'lib' + dir_name
lib_version = meson.project_version()
project_description = 'Fast agent-based simulation of sexually transmitted infections'

subdir('scripts')
subdir('data')
subdir('src')
