install_data([
        'dataset_birth_infect.csv', 'dataset_infect.csv',
        'dataset_birth_resistant.csv', 'dataset_infect_stage.csv',
        'dataset_birth_treated.csv', 'dataset_mortality.csv',
        'dataset_coinfect.csv', 'dataset_mortality_simple.csv',
        'dataset_gen_infect.csv', 'dataset_mortality_staged.csv',
        'dataset_gen_mating.csv', 'dataset_rel.csv',
        'dataset_gen_resistant.csv', 'dataset_single.csv',
        'dataset_gen_sex.csv', 'InitialPopulationCalculations.ods',
        'dataset_gen_sex_preferred.csv', 'MortalityCalculations.ods',
        'dataset_gen_treated.csv'],
        install_dir : join_paths(get_option('datadir'),
                                 meson.project_name(),
                                 'data'))
