# Eventually faststi.py must be installed as a Python package.
# But we'll do that once it's mature.

install_data([
    'check_faststi.sh', 'processResultsFile.py',  'valgrind_faststi.sh',
    'faststi.py', 'processResultsFile.R',
    'meson.build', 'README'],
    install_dir : join_paths(get_option('datadir'),
                             meson.project_name(),
                             'scripts'))
